# blitzwave

./: AUTHORS  ChangeLog  Makefile.am  README  README.md  blitzwave-config.in  blitzwave.pc.in  configure.ac  index.xhtml  packagedoc.css
api/: WaveletDecomp_8h_source.html  Wavelet_8h_source.html  annotated.html  arrayTools_8h_source.html  classbwave_1_1GenFilter-members.html  classbwave_1_1GenFilter.html  classbwave_1_1Wavelet-members.html  classbwave_1_1Wavelet.html  classbwave_1_1WaveletDecomp-members.html  classbwave_1_1WaveletDecomp.html  classbwave_1_1Wavelet_1_1LiftingStep-members.html  classbwave_1_1Wavelet_1_1LiftingStep.html  classbwave_1_1Wavelet_1_1WaveletComponent-members.html  classbwave_1_1Wavelet_1_1WaveletComponent.html  classes.html  files.html  functions.html  functions_enum.html  functions_func.html  hierarchy.html  index.html
doc/: Doxyfile.in  Makefile.am  index.xhtml
doc/examples/: simpleDecompose.cxx  simpleDecompose.h
examples/: array-slowdown.cxx
m4/: cxx-project-deps.m4  cxx-project-init.m4
src/: Makefile.am  Wavelet-test.cxx  Wavelet.cxx  Wavelet.h  WaveletDecomp-test.cxx  WaveletDecomp.cxx  WaveletDecomp.h  arrayTools-test.cxx  arrayTools.cxx  arrayTools.h  testimage.pnm
